@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+02-Sep-2001
+~~~~~~~~~~~
+The options controlling when windows resize work again.
+
 31-Aug-2001
 ~~~~~~~~~~~
 Better guessing of window size for display styles with details.
